--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
     "deploy": "cdk deploy --parameters PortForwardAllowedIP=\"$(curl http://checkip.amazonaws.com/)\""
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.94.1",
+    "@aws-cdk/assert": "1.111.0",
     "@types/node": "10.17.27",
-    "aws-cdk": "1.94.1",
+    "aws-cdk": "^1.111.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-ec2": "1.94.1",
-    "@aws-cdk/aws-iam": "1.94.1",
-    "@aws-cdk/aws-kms": "1.94.1",
-    "@aws-cdk/aws-ssm": "1.94.1",
-    "@aws-cdk/core": "1.94.1"
+    "@aws-cdk/aws-ec2": "1.111.0",
+    "@aws-cdk/aws-iam": "1.111.0",
+    "@aws-cdk/aws-kms": "1.111.0",
+    "@aws-cdk/aws-ssm": "1.111.0",
+    "@aws-cdk/core": "1.111.0"
   }
 }
